messi file RR solo in locale

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,47 @@
 
 .DS_Store
+SDCC/Russo Russo/Lab - 6/LaboratorioSDCC_6.txt
+SDCC/Russo Russo/Lab - 6/handson6.zip
+SDCC/Russo Russo/Lab - 6/handson6.pdf
+SDCC/Russo Russo/Lab - 5/handson5/sqs_lambda_s3/producer.py
+SDCC/Russo Russo/Lab - 5/handson5/sqs_lambda_s3/lambda_sqs_consumer.py
+SDCC/Russo Russo/Lab - 5/handson5/sqs_lambda_s3/function.zip
+SDCC/Russo Russo/Lab - 5/handson5/sqs_lambda_s3/lambda.tf
+SDCC/Russo Russo/Lab - 5/handson5/sqs_example/producer.py
+SDCC/Russo Russo/Lab - 5/handson5/sqs_example/consumer.py
+SDCC/Russo Russo/Lab - 5/handson5/photogallery_v3/templates/home.html
+SDCC/Russo Russo/Lab - 5/handson5/photogallery_v3/templates/newpost.html
+SDCC/Russo Russo/Lab - 5/handson5/photogallery_v3/templates/base.html
+SDCC/Russo Russo/Lab - 5/handson5/photogallery_v3/static/style.css
+SDCC/Russo Russo/Lab - 5/handson5/photogallery_v3/run.sh
+SDCC/Russo Russo/Lab - 5/handson5/photogallery_v3/galleryApp.py
+SDCC/Russo Russo/Lab - 5/handson5/lambda_go_isprime/lambda.tf
+SDCC/Russo Russo/Lab - 5/handson5/lambda_go_isprime/isprime.go
+SDCC/Russo Russo/Lab - 5/handson5/lambda_go_isprime/invoke.py
+SDCC/Russo Russo/Lab - 5/handson5/lambda_go_isprime/code.zip
+SDCC/Russo Russo/Lab - 5/handson5/invoke_hello_world.py
+SDCC/Russo Russo/Lab - 5/handson5/go-beanstalk.zip
+SDCC/Russo Russo/Lab - 5/handson5.pdf
+SDCC/Russo Russo/Lab - 4/handson4/terraform_example1/example.tf
+SDCC/Russo Russo/Lab - 4/handson4/terraform_photogallery_v2/ec2.tf
+SDCC/Russo Russo/Lab - 4/handson4/s3list.py
+SDCC/Russo Russo/Lab - 4/handson4/photogallery_v2/templates/newpost.html
+SDCC/Russo Russo/Lab - 4/handson4/photogallery_v2/templates/home.html
+SDCC/Russo Russo/Lab - 4/handson4/photogallery_v2/templates/base.html
+SDCC/Russo Russo/Lab - 4/handson4/photogallery_v2/static/style.css
+SDCC/Russo Russo/Lab - 4/handson4/photogallery_v2/run.sh
+SDCC/Russo Russo/Lab - 4/handson4/photogallery_v2/galleryApp.py
+SDCC/Russo Russo/Lab - 4/handson4/ec2list.py
+SDCC/Russo Russo/Lab - 4/handson4.pdf
+SDCC/Russo Russo/Lab - 3/handson3.pdf
+SDCC/Russo Russo/Lab - 3/ansible/galleryInventory.aws_ec2.yaml
+SDCC/Russo Russo/Lab - 3/ansible/deploy_gallery.yaml
+SDCC/Russo Russo/Lab - 3/ansible/photogallery.service
+SDCC/Russo Russo/Lab - 2/photogallery_v1/templates/home.html
+SDCC/Russo Russo/Lab - 2/photogallery_v1/templates/newpost.html
+SDCC/Russo Russo/Lab - 2/photogallery_v1/templates/base.html
+SDCC/Russo Russo/Lab - 2/photogallery_v1/static/style.css
+SDCC/Russo Russo/Lab - 2/photogallery_v1/run.sh
+SDCC/Russo Russo/Lab - 2/photogallery_v1/galleryApp.py
+SDCC/Russo Russo/Lab - 2/handson2_221105_231636.pdf
+SDCC/Russo Russo/Lab - 1/handson1.pdf
