--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ SDCC/Russo Russo/Lab - 2/photogallery_v1/run.sh
 SDCC/Russo Russo/Lab - 2/photogallery_v1/galleryApp.py
 SDCC/Russo Russo/Lab - 2/handson2_221105_231636.pdf
 SDCC/Russo Russo/Lab - 1/handson1.pdf
+MPSMF/Lez 4 17:03/Essentials_of_TSA_01_2023_MPSMF.html
